--- a/application/src/main/resources/application.conf
+++ b/application/src/main/resources/application.conf
@@ -26,4 +26,10 @@ bottle {
         address = "localhost"
         port = 8080
     }
+    database {
+        sqlite {
+            driver = "org.sqlite.JDBC"
+            url = "jdbc:sqlite:db/db.db"
+        }
+    }
 }
