--- a/application/pom.xml
+++ b/application/pom.xml
@@ -9,14 +9,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.fithian</groupId>
     <artifactId>application</artifactId>
+    <name>Application</name>
     <packaging>jar</packaging>
     <version>1.0</version>
     <build>
         <plugins>
-            <plugin>
-                <groupId>net.alchim31.maven</groupId>
-                <artifactId>scala-maven-plugin</artifactId>
-            </plugin>
             <plugin>
                 <groupId>net.alchim31.maven</groupId>
                 <artifactId>scala-maven-plugin</artifactId>
@@ -36,28 +33,36 @@
                         </goals>
                     </execution>
                 </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.5.5</version>
                 <configuration>
-                    <launchers>
-                        <launcher>
-                            <id>myLauncher</id>
-                            <mainClass>com.fithian.application.Main</mainClass>
-                            <jvmArgs>
-                                <jvmArg>-Xmx512m</jvmArg>
-                            </jvmArgs>
-                        </launcher>
-                    </launchers>
-                    <args>
-                    <!-- work-around for https://issues.scala-lang.org/browse/SI-8358 -->
-                    <arg>-nobootcp</arg>
-                    </args>
+                    <descriptors>
+                        <descriptor>src/main/assembly/bottle.xml</descriptor>
+                    </descriptors>
                 </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
     <dependencies>
+        <dependency><groupId>com.fithian.common</groupId><artifactId>actor</artifactId></dependency>
         <dependency><groupId>com.fithian.common</groupId><artifactId>config</artifactId></dependency>
+        <dependency><groupId>com.fithian.common</groupId><artifactId>database</artifactId></dependency>
+        <dependency><groupId>com.fithian</groupId><artifactId>database</artifactId></dependency>
         <dependency><groupId>com.fithian.service</groupId><artifactId>rest</artifactId></dependency>
         <dependency><groupId>com.typesafe.akka</groupId><artifactId>akka-actor_2.11</artifactId></dependency>
         <dependency><groupId>com.paytronix.utils</groupId><artifactId>scala</artifactId></dependency>
+        <dependency><groupId>org.slf4j</groupId><artifactId>slf4j-log4j12</artifactId></dependency>
     </dependencies>
 </project>
