--- a/common/actor/pom.xml
+++ b/common/actor/pom.xml
@@ -9,6 +9,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.fithian.common</groupId>
     <artifactId>actor</artifactId>
+    <name>Actor Extensions</name>
     <packaging>jar</packaging>
     <version>1.0</version>
     <build>
