--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>parent</artifactId>
     <packaging>pom</packaging>
     <version>1.0</version>
-    <name>Bottle</name>
+    <name>Bottle Opener App</name>
     <organization>
         <name>Dan Fithian</name>
         <url>http://www.danielfithian.com</url>
@@ -19,7 +19,10 @@
     </developers>
     <modules>
         <module>common/actor</module>
+        <module>common/interchange</module>
         <module>common/config</module>
+        <module>common/database</module>
+        <module>database</module>
         <module>api/common</module>
         <module>api/bottle</module>
         <module>api/user</module>
@@ -50,7 +53,66 @@
                 </configuration>
             </plugin>
         </plugins>
+
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>net.alchim31.maven</groupId>
+                    <artifactId>scala-maven-plugin</artifactId>
+                    <version>3.2.1</version>
+                    <configuration>
+                        <scalaVersion>${scala.version}</scalaVersion>
+                        <jvmArgs>
+                            <jvmArg>-Xss2048K</jvmArg>
+                            <jvmArg>-Xmx1G</jvmArg>
+                        </jvmArgs>
+                        <testSourceDir>src/test/scala</testSourceDir>
+                    </configuration>
+                    <executions>
+                        <execution>
+                            <id>scala-compile-first</id>
+                            <phase>process-resources</phase>
+                            <goals>
+                                <goal>add-source</goal>
+                                <goal>compile</goal>
+                            </goals>
+                        </execution>
+                        <execution>
+                            <id>scala-test-compile</id>
+                            <phase>test-compile</phase>
+                            <goals>
+                                <goal>testCompile</goal>
+                            </goals>
+                        </execution>
+                    </executions>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>2.3.2</version>
+                    <configuration>
+                        <source>1.6</source>
+                        <target>1.6</target>
+                    </configuration>
+                </plugin>
+
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>2.3.1</version>
+                    <configuration>
+                        <archive>
+                            <manifestEntries>
+                                <Implementation-Version>${project.version}</Implementation-Version>
+                            </manifestEntries>
+                        </archive>
+                    </configuration>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
+
     <dependencyManagement>
         <dependencies>
             <dependency><groupId>org.scala-lang</groupId><artifactId>scala-library</artifactId><version>${scalaVersion}</version></dependency>
@@ -63,12 +125,17 @@
             <dependency><groupId>io.spray</groupId><artifactId>spray-can_2.11</artifactId><version>1.3.2</version></dependency>
             <dependency><groupId>io.spray</groupId><artifactId>spray-routing_2.11</artifactId><version>1.3.2</version></dependency>
             <dependency><groupId>net.liftweb</groupId><artifactId>lift-json_2.11</artifactId><version>3.0-M2</version></dependency>
-
+            <dependency><groupId>com.typesafe.slick</groupId><artifactId>slick_2.11</artifactId><version>2.1.0</version></dependency>
+            <dependency><groupId>org.xerial</groupId><artifactId>sqlite-jdbc</artifactId><version>3.8.11.1</version></dependency>
+            <dependency><groupId>org.scalaz</groupId><artifactId>scalaz-core_2.11</artifactId><version>7.1.0</version><exclusions><exclusion><groupId>org.scala-lang</groupId><artifactId>scala-compiler</artifactId></exclusion><exclusion><groupId>org.scala-lang</groupId><artifactId>scala-library</artifactId></exclusion></exclusions></dependency>
+            <dependency><groupId>com.fithian.common</groupId><artifactId>actor</artifactId><version>${project.version}</version></dependency>
+            <dependency><groupId>com.fithian.common</groupId><artifactId>interchange</artifactId><version>${project.version}</version></dependency>
+            <dependency><groupId>com.fithian.common</groupId><artifactId>config</artifactId><version>${project.version}</version></dependency>
+            <dependency><groupId>com.fithian.common</groupId><artifactId>database</artifactId><version>${project.version}</version></dependency>
+            <dependency><groupId>com.fithian</groupId><artifactId>database</artifactId><version>${project.version}</version></dependency>
             <dependency><groupId>com.fithian.api</groupId><artifactId>common</artifactId><version>${project.version}</version></dependency>
             <dependency><groupId>com.fithian.api</groupId><artifactId>bottle</artifactId><version>${project.version}</version></dependency>
             <dependency><groupId>com.fithian.api</groupId><artifactId>user</artifactId><version>${project.version}</version></dependency>
-            <dependency><groupId>com.fithian.common</groupId><artifactId>actor</artifactId><version>${project.version}</version></dependency>
-            <dependency><groupId>com.fithian.common</groupId><artifactId>config</artifactId><version>${project.version}</version></dependency>
             <dependency><groupId>com.fithian.service</groupId><artifactId>rest</artifactId><version>${project.version}</version></dependency>
             <dependency><groupId>com.fithian</groupId><artifactId>application</artifactId><version>${project.version}</version></dependency>
         </dependencies>
